src/test/ui/argument-suggestions/missing_arguments.stderr
error[E0059]: arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:10:3
   |
LL |   one_arg();
   |   ^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:1:4
   |
LL | fn one_arg(_a: i32) {}
   |    ^^^^^^^ -------
help: make these changes
   |
LL |   one_arg({i32});
   |   ^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:14:3
   |
LL |   two_same(               );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:2:4
   |
LL | fn two_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_same({i32}, {i32});
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:15:3
   |
LL |   two_same(   1           );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:2:4
   |
LL | fn two_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_same(1, {i32});
   |   ^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:16:3
   |
LL |   two_diff(               );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:3:4
   |
LL | fn two_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_diff({i32}, {f32});
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:17:3
   |
LL |   two_diff(   1           );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:3:4
   |
LL | fn two_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_diff(1, {f32});
   |   ^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:18:3
   |
LL |   two_diff(          1.0  );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:3:4
   |
LL | fn two_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_diff({i32}, 1.0);
   |   ^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:21:3
   |
LL |   three_same(                       );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:4:4
   |
LL | fn three_same(_a: i32, _b: i32, _c: i32) {}
   |    ^^^^^^^^^^ -------  -------  -------
help: make these changes
   |
LL |   three_same({i32}, {i32}, {i32});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:22:3
   |
LL |   three_same(   1                   );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:4:4
   |
LL | fn three_same(_a: i32, _b: i32, _c: i32) {}
   |    ^^^^^^^^^^ -------  -------  -------
help: make these changes
   |
LL |   three_same(1, {i32}, {i32});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:23:3
   |
LL |   three_same(   1,      1           );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:4:4
   |
LL | fn three_same(_a: i32, _b: i32, _c: i32) {}
   |    ^^^^^^^^^^ -------  -------  -------
help: make these changes
   |
LL |   three_same(1, 1, {i32});
   |   ^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:26:3
   |
LL |   three_diff(          1.0,     ""  );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_diff({i32}, 1.0, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:27:3
   |
LL |   three_diff(   1,              ""  );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_diff(1, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:28:3
   |
LL |   three_diff(   1,     1.0          );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_diff(1, 1.0, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:29:3
   |
LL |   three_diff(                   ""  );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_diff({i32}, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:30:3
   |
LL |   three_diff(          1.0          );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_diff({i32}, 1.0, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:31:3
   |
LL |   three_diff(   1                   );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_diff(1, {f32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:34:3
   |
LL |   four_repeated(                               );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:6:4
   |
LL | fn four_repeated(_a: i32, _b: f32, _c: f32, _d: &str) {}
   |    ^^^^^^^^^^^^^ -------  -------  -------  --------
help: make these changes
   |
LL |   four_repeated({i32}, {f32}, {f32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:35:3
   |
LL |   four_repeated(   1,                     ""   );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:6:4
   |
LL | fn four_repeated(_a: i32, _b: f32, _c: f32, _d: &str) {}
   |    ^^^^^^^^^^^^^ -------  -------  -------  --------
help: make these changes
   |
LL |   four_repeated(1, {f32}, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:38:3
   |
LL |   complex(                                       );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:7:4
   |
LL | fn complex(_a: i32, _b: f32, _c: i32, _d: f32, _e: &str) {}
   |    ^^^^^^^ -------  -------  -------  -------  --------
help: make these changes
   |
LL |   complex({i32}, {f32}, {i32}, {f32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/missing_arguments.rs:39:3
   |
LL |   complex(   1,                             ""   );
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/missing_arguments.rs:7:4
   |
LL | fn complex(_a: i32, _b: f32, _c: i32, _d: f32, _e: &str) {}
   |    ^^^^^^^ -------  -------  -------  -------  --------
help: make these changes
   |
LL |   complex(1, {f32}, {i32}, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 19 previous errors

For more information about this error, try `rustc --explain E0059`.
